# threadodo

./: .gitignore  README.md  pyproject.toml
tests/: test_commands.py
threadodo/: __init__.py  bot.py  creds.py  logger.py  main.py  thread.py  zenodo.py
threadodo/actions/: __init__.py  action.py  checks.py  commands.py
threadodo/templates/: report.css  template.html
